# ocr

./: .gitignore  Package.swift  THIRD_PARTY_NOTICES.md  add_file_to_xcode.rb  add_fonts.rb  add_sqlite3.rb  ocr_server.py  setup.iss  setup_and_run_ocr.bat  setup_and_run_ocr.sh  windows_ocr_helper.ps1
.github/workflows/: web-release.yml
core/: CMakeLists.txt
core/include/: SettingsManager.h  ocr_core_api.h
core/src/: SettingsManager.cpp  ocr_core_api.cpp
core/src/editor/: DocumentExporter.cpp  DocumentExporter.h  ProjectArchive.cpp  ProjectArchive.h  compositor.cpp  compositor.h  text_layer.cpp  text_layer.h  text_renderer.cpp
core/src/history/: DocumentHistoryManager.cpp  DocumentHistoryManager.h
core/src/inpainting/: blender.cpp  blender.h  lama_engine.cpp  lama_engine.h  mask_generator.cpp  mask_generator.h
core/src/license/: device_fingerprint.cpp  license_validator.cpp  license_validator.h
core/src/llm/: LocalLLMEngine.cpp  LocalLLMEngine.h
core/src/ocr/: context_corrector.cpp  context_corrector.h  paddle_ocr_engine.cpp  paddle_ocr_engine.h  text_block.cpp
core/src/parser/: document_parser.cpp  document_parser.h
core/src/preprocessor/: binarize.cpp  denoise.cpp  deskew.cpp  edge_crop.cpp  preprocessor.cpp  preprocessor.h
core/tests/: test_bridge.cpp
docs/: build_i18n.py  i18n.js  index.html  privacy-android.html  privacy-ios.html  privacy-macos.html  privacy-windows.html  update_privacy_i18n.py  update_privacy_rwd.py  user-manual.html
models/: README.md
scripts/: quantize_models.py
web/: capacitor.config.json  index.html  package-lock.json  package.json  start-all.js  test-e2e-stub-server.mjs  test-e2e.html  vite.config.js
web/android/app/: build.gradle
web/android/app/src/main/java/com/ocreditor/app/: MainActivity.java  NativeOcrPlugin.java
web/android/app/src/main/res/values/: strings.xml
web/ios/App/App/: Info.plist  MainViewController.swift  NativeOcrPlugin.swift
web/ios/App/App.xcodeproj/: project.pbxproj
web/ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/public/models/: README.md
web/scripts/: download-lama.mjs
web/src/: App.jsx  index.css  test-e2e.jsx
web/src/components/: OcrCanvas.jsx
web/src/utils/: geminiOcr.js  i18n.js  lamaInpaint.js  llm.js  nativeOcr.js
web/src/workers/: ocr.worker.js
